google authentication and protected routes,navigation of pages to main page while enter the details into sign up and login

--- a/src/component/Login.css
+++ b/src/component/Login.css
@@ -52,5 +52,10 @@
    .signup-button:hover {
      background-color: rgb(6, 142, 52);
    }
-   
+   .error-messages{
+    color:red;
+  font-size: 18px;
+  margin-top: 2px;
+ text-align: center;
+   }
    
