--- a/src/component/SignUp.css
+++ b/src/component/SignUp.css
@@ -7,7 +7,7 @@ text-align: center;
 }
 .signup-main-container {
   max-width: 500px;
-  margin: 50px auto 200px auto;
+  margin: 50px auto 80px ;
   background-color: rgb(251, 251, 251);
   padding: 40px;
   border: 1px solid rgb(233, 234, 236);
