--- a/src/Components/Addlist.css
+++ b/src/Components/Addlist.css
@@ -49,7 +49,7 @@
   padding: 10px 10px;
   border-radius: 4px;
   border: 1px solid #e6e8e9;
-  width: 90%;
+  width: 95%;
   margin-bottom: 20px;
 }
 
@@ -111,6 +111,61 @@
 .text-taskcompleted {
   text-decoration-style:solid;
   text-decoration-line: line-through; 
-  text-decoration-color: rgb(207, 81, 81);
+  text-decoration-color: rgb(225, 82, 82);
+  text-decoration-thickness: 2px;
 
+}
+.text-task{
+  width:50%
+}
+.Add-taskdisabled{
+  background: rgb(169, 172, 170);
+  text-align: center;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 15px;
+  border: none;
+  width: 476px;
+  gap: 120px;
+  height: 40px;
+
+}
+.logout-btn{
+  background-color:rgb(6, 159, 57);
+  text-align: center;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 15px;
+  border: none;
+  width: 20;
+  gap: 120px;
+  height: 40px;
+  
+}
+.logout-btn-container{
+  display: flex;
+  justify-content: end;
+}
+.logout-btn:hover{
+  background: rgba(6, 159, 57, 0.925);
+}
+/* HTML: <div class="loader"></div> */
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 15px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  animation: l5 1s infinite linear alternate;
+}
+@keyframes l5 {
+    0%  {box-shadow: 20px 0 #000, -20px 0 #0002;background: #000 }
+    33% {box-shadow: 20px 0 #000, -20px 0 #0002;background: #0002}
+    66% {box-shadow: 20px 0 #0002,-20px 0 #000; background: #0002}
+    100%{box-shadow: 20px 0 #0002,-20px 0 #000; background: #000 }
 }
