--- a/src/Components/Addlist.css
+++ b/src/Components/Addlist.css
@@ -1,33 +1,33 @@
 .addlist-container {
   display: flex;
   flex-direction: column;
-  border: 1px solid #e6e8e9;
-  gap: 10px;
-  padding: 15px 20px;
-  margin: 10px auto 20px auto;
-  width: 500px;
+  border: 0.063rem  solid #e6e8e9;
+  gap: 0.625rem;
+  padding: 0.938rem 1.25rem;
+  margin: 0.625rem auto 1.25rem auto;
+  width: 31.25rem;
 }
 .input-task,
 .input-description {
   outline: none;
-  padding: 15px 12px;
-  border-radius: 4px;
-  border: 1px solid #e6e8e9;
+  padding: 0.938rem 0.75rem;
+  border-radius: 0.25rem;
+  border: 0.063rem  solid #e6e8e9;
   width: 90%;
 }
 .Add-task {
   background: rgb(6, 159, 57);
   text-align: center;
   color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.313rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   border: none;
-  width: 476px;
-  gap: 120px;
-  height: 40px;
+  width: 29.75rem;
+  gap: 7.5rem;
+  height: 2.5rem;
 }
 .Add-task:hover {
   background: rgba(6, 159, 57, 0.925);
@@ -35,39 +35,39 @@
 .overViewContainer {
   display: flex;
   flex-direction: column;
-  border: 1px solid #e6e8e9;
-  gap: 10px;
-  padding: 15px 20px;
-  margin: 10px auto 20px auto;
-  width: 500px;
+  border: 0.063rem  solid #e6e8e9;
+  gap: 0.625rem;
+  padding: 0.938rem 1.25rem;
+  margin: 0.625rem auto 1.25rem auto;
+  width: 31.25rem;
 }
 .list-item {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   outline: none;
-  padding: 10px 10px;
-  border-radius: 4px;
-  border: 1px solid #e6e8e9;
+  padding: 0.625rem 0.625rem;
+  border-radius: 0.25rem;
+  border: 0.063rem  solid #e6e8e9;
   width: 95%;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .list-btn {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  gap: 1.25rem;
   
 }
 .delete-btn {
   background-color: rgb(232, 6, 6);
   text-align: center;
   color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.313rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   border: none;
   width: 20;
   gap: 120px;
@@ -77,11 +77,11 @@
   background-color: rgba(102, 178, 239, 0.935);
   text-align: center;
   color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.313rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   border: none;
   width: 20;
   gap: 120px;
@@ -91,11 +91,11 @@
   background-color: rgba(102, 178, 239, 0.935);
   text-align: center;
   color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.313rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   border: none;
   width: 20;
   gap: 120px;
@@ -122,11 +122,11 @@
   background: rgb(169, 172, 170);
   text-align: center;
   color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.313rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   border: none;
   width: 476px;
   gap: 120px;
@@ -137,11 +137,11 @@
   background-color:rgb(6, 159, 57);
   text-align: center;
   color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.313rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 0.938rem;
   border: none;
   width: 20;
   gap: 120px;
@@ -158,7 +158,7 @@
 /* HTML: <div class="loader"></div> */
 /* HTML: <div class="loader"></div> */
 .loader {
-  width: 15px;
+  width: 0.938rem;
   aspect-ratio: 1;
   border-radius: 50%;
   animation: l5 1s infinite linear alternate;
