--- a/src/Components/ListPage.css
+++ b/src/Components/ListPage.css
@@ -1,22 +1,9 @@
 .listpage-header-container{
-   font-size: 28px;
+   font-size: 1.75rem;
    font-weight:700;
-   margin: 50px auto 40px auto;
+   margin: 1.75rem auto 2.5rem auto;
    text-align: center;
+   width:100%
    
 }
-.add-button{
-    background: black;
-    color: white;
-    padding: 10px 60px;
-    cursor: pointer;
-    font-weight: bold;
-    font-size: 15px;
-    margin-top: 40px;
-    box-shadow: 0 0 10px rgba(243, 241, 241, 0.1);
-    border: none;
-    border-radius: 4px;
-    height: 40px;
 
-    
-}
